# phy

./: Doxyfile  Makefile.am  Makefile.in  README.md  README_install.txt  README_license.txt  README_thirdPartyLibraries.txt  aclocal.m4  configure  configure.ac  implementationNotes.txt  notes.txt  toDo.txt
phy/: DataIO.cpp  DataIO.h  DfgDataWrap.cpp  DfgDataWrap.h  DfgIO.cpp  DfgIO.h  DiscreteFactorGraph.cpp  DiscreteFactorGraph.h  Emit.h  EmitWrap.cpp  EmitWrap.h  EmitWrapDfg.cpp  EmitWrapDfg.h  EmitWrapIO.cpp  EmitWrapIO.h  EmitWrapPhylo.h  FactorGraph.cpp  FactorGraph.h  Factors.cpp  Factors.h  FactorsIO.cpp  FactorsIO.h  FlexLexer.h~  Grammar.cpp  Grammar.h  GrammarDef.h  GrammarIO.cpp  GrammarIO.h  GrammarTrain.cpp  GrammarTrain.h  GrammarWrap.cpp  GrammarWrap.h  Makefile.am  Makefile.in  Mixtures.cpp  Mixtures.h  NewickLexer.cpp  NewickNode.cpp  NewickNode.h  NewickParser.cpp  (+31 more)
phy/newickParser/: Makefile  NewickLexer.cpp  NewickParserBase.cpp  NewickParserBase.h  newick.y  testfil
phy/newickParser/.svn/: entries
phy/newickParser/.svn/text-base/: Makefile.svn-base  NewickLexer.cpp.svn-base  NewickParserBase.cpp.svn-base  NewickParserBase.h.svn-base  config.svn-base  file.dep.svn-base  newick.l.svn-base
phy/newickParser/example/: exp.l  parser.cc  parser.h
phy/newickParser/example/.svn/: entries
phy/test/: DiscreteFactorGraph_test.cpp  EmitWrap_test.cpp  Factors_test.cpp  Grammar_test.cpp  Makefile.am  Makefile.in  Mixtures_test.cpp  Observations_test.cpp  PhyDef_test.cpp  PhyIO_test.cpp  PhyTestDef.cpp  PhyTestDef.h  PhyloTreeIO_test.cpp  RateMatrix_test.cpp  StatDist_test.cpp  TRCTMCTree_test.cpp  ama_test.cpp  fgSimplePhylo.dot  gmon.out  notes.txt  out.dot  testParser.cpp  testRunner.cpp  tmp.cpp  tmp_phyloTree_2-metaNuc_GTR.txt  tmp_phyloTree_metaNuc_GTR.txt  utils_test.cpp
phy/test/data/: dinucPhyloModel.v2.txt  dinucPhyloModel.v3.txt  grammarEvoFoldStrAnnoMap.v1.txt  grammarKnudsen99.txt  grammarKnudsen99AnnoMap.txt  metaNuc.txt  notes.txt  parserTest.txt  seqToVarSymbolTest.txt  seqToVarSymbolTest.txt~  seqToVarSymbolTestSub.txt  test1.ama  test1.ama~  test1.bed  test4FactorPotentials.txt  varData.tab~
phy/test/data/.svn/: entries
phy/test/data/dfgSpec/: test1FactorGraph.txt  test1Potentials.txt  test1Potentials.txt~  test1Variables.txt  test2Potentials.txt  test2StateMaps.txt
phy/test/data/dfgSpecBeta/: factorPotentials.txt  stateMaps.txt  variables.txt
phy/test/data/dfgSpecBinom/: factorPotentials.txt
phy/test/data/dfgSpecBinom2/: factorPotentials.txt  stateMaps.txt
phy/test/data/dfgSpecExpect/: factorPotentials.txt
phy/test/data/dfgSpecFiles/: factorPotentials.txt
phy/test/data/dfgSpecMichal/: factorGraph.txt  factorPotentials.txt  stateMaps.txt  variables.txt
phy/test/data/dfgSpecNorm/: test1FactorGraph.txt  test1Potentials.txt  test1StateMaps.txt  test1VarData.tab
phy/test/data/dfgSpecNorm2/: stateMaps.txt
phy/test/data/dfgSpecNormObs/: factorGraph.txt  factorPotentials.txt  stateMaps.txt  variables.txt
phy/test/data/dfgSpecSahoo/: factorGraph.txt  factorPotentials1.txt  factorPotentials2.txt  seqToVarSymbol.txt
phy/test/data/dfgSpecSahooPair/: factorGraph.txt  factorPotentials.txt  seqToVarSymbol.txt  variables.txt
phy/test/data/dfgSpecSubscribe/: factorGraph.txt  factorPotentials.txt  stateMaps.txt  variables.txt
phy/test/data/dfgSpecUnconnected/: factorGraph.txt  factorPotentials.txt  variables.txt
phy/test/data/grammarStacking/: README.txt  grammarStacking.txt  grammarStackingAnnoMap.txt  grammarStackingEmitModels.txt  grammarStackingEmitModels.txt~
phy/test/output/: 28wayDfg.dot  28wayDfg.ps  emTestLog.txt  metaNuc.txt  optOut.txt  seqToVarSymbolTest.out.txt  seqToVarSymbolTest.out.txt~  test1FactorGraph.out.txt  test1Potentials.out.txt  test1StateMaps.out.txt  test1StateMaps.txt  test1Variables.txt  tmpTest1.ama
phy/test/output/.svn/: entries
src/: EvoFold.cpp  Makefile  Makefile.am  Makefile.in  Makefile.old.am  dfgEval.cpp  dfgEval.old.cpp  dfgTrain.cpp  grammarTrain.cpp  multinomial.cpp  notes.txt  scoreEval.cpp
src/test/.libs/: lt-EvoFoldV2
src/test/EvoFold/: README_EVOFOLD_OUTPUT_FORMAT
src/test/EvoFold/EvoFoldConfig.v7b/: EvoFoldAnnoMap.txt  EvoFoldEmitModels.txt  EvoFoldPhyloModelDinuc.txt
src/test/EvoFoldEx/: README.txt  allPred.tab  grammarLogFile.txt  test11_jsp.ama  test12.ama  test2.ama  tmpGrammar.txt
src/test/EvoFoldEx/EvoFoldConfig.v7b/: EvoFoldGrammarStr.txt  EvoFoldPhyloModelSingle.txt  EvoFoldPhyloModelSingleSlow.txt
src/test/EvoFoldEx/output/: allPred.tab
src/test/data/.svn/: entries
src/test/data/EvoFoldConfig/: EvoFoldAnnoMap.orig.v1.txt  EvoFoldAnnoMap.txt~  (+6 more)
src/test/dfgEvalEx/: test1FacData.tab  test1VarData.tab
src/test/dfgTrain2DNorm/: README.txt  test1VarData.tab  testcases.R
src/test/dfgTrainBetaEx/: README.txt  dfgSpec2  test1VarData.tab  test2SubVarData.tab  test2VarData.tab
src/test/dfgTrainBinom/: README.txt  test2VarData.tab
src/test/dfgTrainEx/: README.txt  logFile.txt  out_factorGraph.txt  out_stateMaps.txt  out_variables.txt  test1VarData.tab
src/test/dfgTrainMixEx/: README.txt  test1VarData.tab  test2VarData.tab  test3VarData.tab  testcases.R
src/test/dfgTrainNormEx/: README.txt  test1VarData.tab  testCases.R
src/test/dfgTrainNormObs/: dfgSpec  gen_data.R  subVarData.tab  varData.tab
src/test/dfgTrainSubscribe/: dfgSpec  test1VarData.tab  test1subVarData.tab  test2VarData.tab  test2subVarData.tab
src/test/scoreEvalEx1/: README.txt
(+108 files in other folders)
